# DOOM-Dark-ages

./: BUILD_DARKAGES.bat  BUILD_DARKAGES_CMAKE.bat  CMakeLists.txt  build_windows.sh
.github/workflows/: build-windows.yml
cmake/: Toolchain-Windows-x86_64.cmake
darkages/icon/: darkages.res
neo/: _Common.props  _DoomExe.props  doomexe.vcxproj
neo/d3xp/gamesys/: Class.h
neo/idlib/: precompiled.h
neo/idlib/sys/: sys_includes.h  sys_intrinsics.h
neo/renderer/: BinaryImage.cpp  Model.cpp
neo/sound/: snd_local.h
neo/sys/win32/: darkages.rc
neo/sys/win32/rc/: darkages.rc
